--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,22 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^7.3.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^7.3.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.8",
-    "survey-knockout": "^1.0.20",
     "survey-angular": "^1.0.20",
+    "survey-knockout": "^1.0.20",
     "surveyjs-editor": "^1.0.20",
     "surveyjs-widgets": "^1.0.20",
     "zone.js": "^0.8.20"
