--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,11 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0",
-    "nodemon": "^1.18.9"
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.18.9"
   }
 }
