--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.8",
     "survey-angular": "^1.0.20",
     "survey-knockout": "^1.0.20",
